--- a/style.css
+++ b/style.css
@@ -1,80 +1,75 @@
-body{
-    font-family:'Poppins', sans-serif;
-    margin: 0%
-    
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0%;
 }
-h1{
-    font-size: 50px;
+h1 {
+  font-size: 50px;
 }
-h2{
-    font-size: 40px;
+h2 {
+  font-size: 40px;
 }
-p{
-    color: dimgray;
+p {
+  color: dimgray;
 }
-.orange-highlight{
-    color: orange;
+.orange-highlight {
+  color: orange;
 }
-.half-width{
-    width: 40%;
-    float: left;
-   margin-left: 5%;
-   padding-left: 2%;
-    
+.half-width {
+  width: 40%;
+  float: left;
+  margin-left: 5%;
+  padding-left: 2%;
 }
-.half-width img{
-    width: 100%;
-    margin-top: 4%;
-    padding-top: 5%;
+.half-width img {
+  width: 100%;
+  margin-top: 4%;
+  padding-top: 5%;
 }
 
-.top-banner{
-     background-repeat: no-repeat;
-    background-image:url("images/top-banner.png")
+.top-banner {
+  background-repeat: no-repeat;
+  background-image: url("images/top-banner.png");
 }
-    
 
-section{
-    height:500px;
-    padding-bottom: 150px;
+section {
+  height: 500px;
+  padding-bottom: 150px;
 }
-.link-button{
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    background-image: linear-gradient(45deg,  lightSalmon,tomato);
-    padding: 10px 20px;
-    border-radius: 5px;
-
+.link-button {
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  background-image: linear-gradient(45deg, lightSalmon, tomato);
+  padding: 10px 20px;
+  border-radius: 5px;
 }
-.dream-area{
-    background-image: url("images/dream-bg.png");
-    background-repeat: no-repeat;
-    background-position: right;
+.dream-area {
+  background-image: url("images/dream-bg.png");
+  background-repeat: no-repeat;
+  background-position: right;
 }
-.single-expericence
-{
-    box-shadow: 10px 10px 40px gray;
-    border-radius: 5px;
-    height: 80%;
-    background-color: white;
+.single-expericence {
+  box-shadow: 10px 10px 40px gray;
+  border-radius: 5px;
+  height: 80%;
+  background-color: white;
 }
-.experience-area{
-    background-image: url("images/exp-bg.png");
-    background-repeat: no-repeat;
-    background-position: left;
+.experience-area {
+  background-image: url("images/exp-bg.png");
+  background-repeat: no-repeat;
+  background-position: left;
 }
-#full-stack{
-    border-left: 7px solid;
-    border-image: linear-gradient(170deg, lightSalmon tomato);
-    border-image-slice: 1;
+#full-stack {
+  border-left: 7px solid;
+  border-image: linear-gradient(170deg, lightSalmon tomato);
+  border-image-slice: 1;
 }
-#baby-web{
-    border-left: 7px solid;
-    border-image: linear-gradient(180deg,blue cyan);
-    border-image-slice: 1;
+#baby-web {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, blue cyan);
+  border-image-slice: 1;
 }
-footer{
-    text-align: center;
-    font-size: 12px;
+footer {
+  text-align: center;
+  font-size: 12px;
 }
